# WiseBot

./: .env.dist  pyproject.toml  requirements.txt
src/: config.py  main.py
src/infrastructure/api/: base.py
src/infrastructure/api/wise/: api.py  schemas.py
